--- a/package.json
+++ b/package.json
@@ -138,7 +138,8 @@
     "uglify-save-license": "^0.4.1",
     "url-loader": "^0.5.7",
     "webpack": "3.12.0",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "@wordpress/api-fetch": "^2.0.0"
   },
   "devDependencies": {
     "babel-register": "^6.8.0",
