--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "issues": "https://github.com/Automattic/jetpack/issues"
     },
     "require"    : {
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.4.4",
